--- a/CB.tex
+++ b/CB.tex
@@ -52,10 +52,10 @@
     где $N_{t-1}(a)$ — число выборов руки $a$ до состояния $t$.
     \item Параметр $\varepsilon\in[0,1]$ балансирует exploitation и exploration:
     \begin{itemize}
-      \item Малое $\varepsilon$ — мало исследования, быстрое «залипание» на локальном оптимуме.
-      \item Большое $\varepsilon$ — много случайных шагов, замедленное сходление.
+      \item Малое $\varepsilon$ — мало исследования, долгая сходимость.
+      \item Большое $\varepsilon$ — при нахождении оптимальной ручки много неоптимальных действий.
     \end{itemize}
-    \item Простейшая стратегия, легко реализуется и анализируется.
+    \item Простейшая стратегия, легко реализуется и анализируется. Даже при нахождении оптимальной ручки имеем бесконечно большой регрет из-за $\varepsilon$ доли не оптимальных действий
   \end{itemize}
 \end{frame}
 
