--- a/CB.tex
+++ b/CB.tex
@@ -197,7 +197,65 @@
     \end{align*}
   \end{itemize}
 \end{frame}
-
+\begin{frame}{Алгоритм D-LinUCB}
+  \begin{itemize}
+    \item Модель: $X_t = \langle A_t, \theta^*_t\rangle + \eta_t$, где $\theta^*_t$ меняется во времени.
+    \item Дисконтированные веса: $w_{t,s}=\gamma^{t-s}$, $0<\gamma<1$; регуляризация $\lambda>0$.
+    \item Обновляем оценку параметра:
+    \[
+      \hat\theta_{t-1} = \arg\min_{\theta} \sum_{s=1}^{t-1} \gamma^{t-1-s}(X_s - \langle A_s,\theta\rangle)^2 + \lambda\|\theta\|^2_2.
+    \]
+    \item Определяем матрицы:
+    \begin{aligned}
+      V_{t-1} &= \sum_{s=1}^{t-1} \gamma^{t-1-s} A_s A_s^\top + \lambda I_d,\\
+      \tilde V_{t-1} &= \sum_{s=1}^{t-1} \gamma^{2(t-1-s)} A_s A_s^\top + \lambda I_d.
+    \end{aligned}
+    \item Доверительный радиус при уровне $1-\delta$:
+    \[
+      \beta_{t-1} = \sqrt{\lambda}\,S + \sigma\sqrt{2\ln\frac{1}{\delta} + d\ln\Bigl(1 + \frac{L^2(1-\gamma^{2(t-1)})}{\lambda(1-\gamma^2)}\Bigr)}.
+    \]
+    \item Upper Confidence Bound:
+    \[
+      p_{t,a} = \langle a,\hat\theta_{t-1}\rangle
+      + \beta_{t-1}\sqrt{a^\top V_{t-1}^{-1}\tilde V_{t-1}V_{t-1}^{-1}a}.
+    \]
+    \item Выбираем $A_t = \arg\max_{a\in A_t} p_{t,a}$, наблюдаем вознаграждение $X_t$.
+    \item Рекурсивные обновления:
+    \begin{aligned}
+      V_t &= \gamma V_{t-1} + A_tA_t^\top + (1-\gamma)\lambda I_d,\\
+      \tilde V_t &= \gamma^2 \tilde V_{t-1} + A_tA_t^\top + (1-\gamma^2)\lambda I_d,\\
+      b_t &= \gamma b_{t-1} + X_t A_t,\\
+      \hat\theta_t &= V_t^{-1} b_t.
+    \end{aligned}
+  \end{itemize}
+\end{frame}
+\begin{frame}{Сравнение}
+  \begin{center}
+    \includegraphics[width=0.8\textwidth]{trahat.jpg}
+  \end{center}
+\end{frame}
+\begin{frame}{Результаты}
+ \begin{table}[ht]
+    \centering
+    \begin{tabular}{l c}
+      \hline
+      \textbf{Метод} & \textbf{Iris Regret} \\
+      \hline
+      UCB (\(\alpha=1.0\)) & 33.47 \\
+      LinUCB (Disjoint, \(\alpha=1.0\)) & 12.93 \\
+      LinUCB (Hybrid, \(\alpha=1.0\)) & 12.99 \\
+      D-LinUCB (\(\alpha=1.0,\,\gamma=0.95\)) & 17.40 \\
+      \hline
+    \end{tabular}
+    \caption{Кумулятивный регрет на Iris}
+  \end{table}
+  \vspace{1em}
+  % Графики и регрет
+  \begin{itemize}
+    \item Различие между Hybrid и LinUCB очень мало $\Longrightarrow$ на Iris простая линейная модель уже почти полностью захватывает полезную информацию.
+    \item D-LinUCB «забывает» старые наблюдения, что в стационарном Iris-примере приводит к небольшому ухудшению.
+  \end{itemize}
+\end{frame}
 \begin{frame}{Заключение}
   \begin{itemize}
     \item LinUCB позволяет эффективно балансировать исследование и использование.
