--- a/CB.tex
+++ b/CB.tex
@@ -72,7 +72,7 @@
     \end{itemize}
     \item Выбор руки, максимизирующей UCB:
     $$a_t = \arg\max_a UCB_{t,a}.$$  
-    \item Классический метод, гарантирующий регрет $O\bigl(\sqrt{KT\ln T}\bigr)$ для $K$ рук и $T$ шагов.
+    \item Классический метод, гарантирующий регрет $O\bigl(\sqrt{|A|T\ln T}\bigr)$ для $K$ рук и $T$ шагов.
     \item Интуиция: рука с небольшим $N(a)$ получает большой бонус и исследуется чаще.
   \end{itemize}
 \end{frame}
@@ -155,28 +155,38 @@
       \textbf{LinUCB } &2619.0& 32.0 & 136.0 \\
       \hline
     \end{tabular}
-    \caption{Точность различных методов}
+    \caption{Кумулятивный регрет различных методов}
   \end{table}
   \vspace{1em}
   % Графики и регрет
   \begin{itemize}
     \item LinUCB демонстрирует более быстрый спад регрета.
     \item Что не удивительно, так как в задаче важен контекст.
-    \item Для датасетов большой размерности проблемно применять подобные методы.
+     \item Для датасетов большой размерности проблемно применять подобные методы.
   \end{itemize}
 \end{frame}
 \begin{frame}{Алгоритм EXP4}
   \begin{itemize}
     \item EXP4 (Exponential-weight algorithm for Exploration and Exploitation using Experts).
-    \item Есть $N$ экспертов, каждый эксперт $i$ задаёт распределение $\xi_{t,i}=(\xi_{t,i,a})_{a\in A}$.
-    \item Веса экспертов $w_{1,i}=1$, обновление:
-    \[ w_{t+1,i} = w_{t,i} \exp\Bigl(\frac{\eta}{|A|}\,\hat{r}_{t,a_t}\,\frac{\xi_{t,i,a_t}}{p_{t,a_t}}\Bigr), \]
-    где $p_{t,a}=\sum_i \frac{w_{t,i}}{\sum_j w_{t,j}}\,\xi_{t,i,a}$ и $\hat{r}_{t,a_t}=r_{t,a_t}/p_{t,a_t}$.
+    \item Имеется $N$ экспертов, каждый эксперт $i$ задаёт распределение $\xi_{t,i} = (\xi_{t,i,1}, ..., \xi_{t,i,K})$ над действиями.
+    \item Веса экспертов инициализируются $w_{1,i} = 1$. Обновление весов:
+    \[
+    w_{t+1,i} = w_{t,i} \exp\left(\frac{\gamma}{K} \cdot \hat{y}_{t,i}\right),
+    \]
+    где 
+    \begin{align*}
+    p_{t,a} &= (1-\gamma)\frac{\sum_{i=1}^N w_{t,i}\xi_{t,i,a}}{W_t} + \frac{\gamma}{K}, \\
+    \hat{r}_{t,a} &= \begin{cases}
+    \frac{r_{t,a}}{p_{t,a}}, & \text{если } a = a_t \\
+    0, & \text{иначе}
+    \end{cases} \\
+    \hat{y}_{t,i} &= \xi_{t,i} \cdot \hat{r}_t = \sum_{a=1}^K \xi_{t,i,a}\hat{r}_{t,a}
+    \end{align*}
     \item Выбор действия $a_t\sim p_t$ гарантирует регрет $O(\sqrt{T|A|\ln N})$.
   \end{itemize}
 \end{frame}
 
-%% Слайд HybridUCB
+
 \begin{frame}{Алгоритм HybridUCB}
   \begin{itemize}
     \item Расширение LinUCB: учитываем общие и специфические признаки.
@@ -229,6 +239,7 @@
     \end{aligned}
   \end{itemize}
 \end{frame}
+
 \begin{frame}{Сравнение}
   \begin{center}
     \includegraphics[width=0.8\textwidth]{trahat.jpg}
@@ -258,10 +269,27 @@
 \end{frame}
 \begin{frame}{Заключение}
   \begin{itemize}
-    \item LinUCB позволяет эффективно балансировать исследование и использование.
-    \item Метод применим к решению задач в онлайне, когда нужно действовать в неопределённости.
-    \item В дальнейшем: расширение гибридной модели, учёт временной изменчивости.
+    \item Бандиты являются эффективным алгоритмом для решения задач, связанных с исследованием среды. Отличием от классического RL является то, что агент не изменяет её состояние.
+    \item Контекстуальные бандиты, в отличие от бандитов, ориентирующихся исключительно на награду, позволяют дополнительно линейно учитывать признаки объектов.
+Эксперименты доказывают, что это позволяет с высокой точностью решать различные задачи, в частности задачу классификации, где классы представимы как «ручки» бандита.
+    \item Существует большое количество модификаций подхода. Гиперпараметры играют большую роль в сходимости алгоритма.
   \end{itemize}
+\end{frame}
+\begin{frame}{Распределение ролей}
+  \begin{itemize}
+    \item \textbf{Спицын Павел}: имплементация алгоритмов LinUCB и HybridUCB, проведение экспериментов и анализ результатов.
+    \item \textbf{Мурзин Илья}: формализация задачи, разработка методологии эксперимента, подготовка датасетов.
+    \item \textbf{Зинатулин Артём}: разработка инфраструктуры для онлайн-имитации, написание вспомогательных скриптов.
+    \item \textbf{Никифорова Анна}: обзор и реализация алгоритмов UCB, $\epsilon$-greedy и EXP4, математические выкладки.
+    \item \textbf{Глазов Иван}: подготовка визуализаций (графиков и таблиц).
+    \item \textbf{Газизуллин Нияз}: обзор литературы по контекстным бандитам, написание введения и заключения.
+  \end{itemize}
+\end{frame}
+\begin{frame}{Спасибо за внимание!}
+  \begin{center}
+    % Вписать по высоте 0.8 высоты текста слайда, сохраняя пропорции
+    \includegraphics[height=0.8\textheight,keepaspectratio]{tensor.jpg}
+  \end{center}
 \end{frame}
 
 \end{document}
